--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
   <main>
     <section class="about">
       <div class="container">
-        <h1 class="h1">СОЗДАНИЕ и РЕКЛАМА ЭФФЕКТИВНЫХ САЙТОВ</h1>
+        <h1 class="h1">Разработка сайта. Реклама. Продвижение. Маркетинг.</h1>
         <p class="about-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Amet sed vulputate vitae velit
           dictum cursus amet. Turpis donec ut velit quis. Cursus commodo, eget urna, sapien amet. </p>
-        <button class="about-btn">Нужная кнопка</button>
+        <button class="about-btn">Обсудим проект</button>
       </div>
     </section>
     <section class="services">
@@ -311,10 +311,9 @@
                 d="M30 56.25L18.42 50.0756C15.1188 48.3193 12.3581 45.6972 10.4342 42.4907C8.5104 39.2842 7.49604 35.6144 7.50001 31.875V7.5C7.501 6.50574 7.89641 5.55249 8.59946 4.84945C9.3025 4.1464 10.2558 3.75099 11.25 3.75H48.75C49.7443 3.75099 50.6975 4.1464 51.4006 4.84945C52.1036 5.55249 52.499 6.50574 52.5 7.5V31.875C52.504 35.6144 51.4896 39.2842 49.5658 42.4907C47.6419 45.6972 44.8813 48.3193 41.58 50.0756L30 56.25ZM11.25 7.5V31.875C11.2469 34.9346 12.0771 37.9373 13.6514 40.5608C15.2258 43.1843 17.4849 45.3296 20.1863 46.7663L30 51.9994L39.8138 46.7681C42.5154 45.3313 44.7747 43.1858 46.3491 40.5619C47.9234 37.9381 48.7535 34.935 48.75 31.875V7.5H11.25Z"
                 fill="#D3844A" />
             </svg>
-            <div class="advantage-title">Преимущество</div>
+            <div class="advantage-title">Лояльные цены</div>
             <div class="advantage-text">
-              Lorem ipsum dolor sit amet,
-              consecteteu.
+              Сайты для малого и среднего бизнеса по доступной цене
             </div>
           </div>
 
@@ -327,10 +326,9 @@
                 d="M30 56.25L18.42 50.0756C15.1188 48.3193 12.3581 45.6972 10.4342 42.4907C8.5104 39.2842 7.49604 35.6144 7.50001 31.875V7.5C7.501 6.50574 7.89641 5.55249 8.59946 4.84945C9.3025 4.1464 10.2558 3.75099 11.25 3.75H48.75C49.7443 3.75099 50.6975 4.1464 51.4006 4.84945C52.1036 5.55249 52.499 6.50574 52.5 7.5V31.875C52.504 35.6144 51.4896 39.2842 49.5658 42.4907C47.6419 45.6972 44.8813 48.3193 41.58 50.0756L30 56.25ZM11.25 7.5V31.875C11.2469 34.9346 12.0771 37.9373 13.6514 40.5608C15.2258 43.1843 17.4849 45.3296 20.1863 46.7663L30 51.9994L39.8138 46.7681C42.5154 45.3313 44.7747 43.1858 46.3491 40.5619C47.9234 37.9381 48.7535 34.935 48.75 31.875V7.5H11.25Z"
                 fill="#D3844A" />
             </svg>
-            <div class="advantage-title">Преимущество</div>
+            <div class="advantage-title">Качество</div>
             <div class="advantage-text">
-              Lorem ipsum dolor sit amet,
-              consecteteu.
+              Действительно продающие сайты с проработанным маркетингом
             </div>
           </div>
 
@@ -343,12 +341,43 @@
                 d="M30 56.25L18.42 50.0756C15.1188 48.3193 12.3581 45.6972 10.4342 42.4907C8.5104 39.2842 7.49604 35.6144 7.50001 31.875V7.5C7.501 6.50574 7.89641 5.55249 8.59946 4.84945C9.3025 4.1464 10.2558 3.75099 11.25 3.75H48.75C49.7443 3.75099 50.6975 4.1464 51.4006 4.84945C52.1036 5.55249 52.499 6.50574 52.5 7.5V31.875C52.504 35.6144 51.4896 39.2842 49.5658 42.4907C47.6419 45.6972 44.8813 48.3193 41.58 50.0756L30 56.25ZM11.25 7.5V31.875C11.2469 34.9346 12.0771 37.9373 13.6514 40.5608C15.2258 43.1843 17.4849 45.3296 20.1863 46.7663L30 51.9994L39.8138 46.7681C42.5154 45.3313 44.7747 43.1858 46.3491 40.5619C47.9234 37.9381 48.7535 34.935 48.75 31.875V7.5H11.25Z"
                 fill="#D3844A" />
             </svg>
-            <div class="advantage-title">Преимущество</div>
+            <div class="advantage-title">Дизайн</div>
             <div class="advantage-text">
-              Lorem ipsum dolor sit amet,
-              consecteteu.
+              Адаптивные сайты в современном стиле
             </div>
           </div>
+
+          <div class="advantage">
+            <svg width="60" height="60" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M26.25 31.1063L21.3937 26.25L18.75 28.8937L26.25 36.3937L41.25 21.3937L38.6063 18.75L26.25 31.1063Z"
+                fill="#D3844A" />
+              <path
+                d="M30 56.25L18.42 50.0756C15.1188 48.3193 12.3581 45.6972 10.4342 42.4907C8.5104 39.2842 7.49604 35.6144 7.50001 31.875V7.5C7.501 6.50574 7.89641 5.55249 8.59946 4.84945C9.3025 4.1464 10.2558 3.75099 11.25 3.75H48.75C49.7443 3.75099 50.6975 4.1464 51.4006 4.84945C52.1036 5.55249 52.499 6.50574 52.5 7.5V31.875C52.504 35.6144 51.4896 39.2842 49.5658 42.4907C47.6419 45.6972 44.8813 48.3193 41.58 50.0756L30 56.25ZM11.25 7.5V31.875C11.2469 34.9346 12.0771 37.9373 13.6514 40.5608C15.2258 43.1843 17.4849 45.3296 20.1863 46.7663L30 51.9994L39.8138 46.7681C42.5154 45.3313 44.7747 43.1858 46.3491 40.5619C47.9234 37.9381 48.7535 34.935 48.75 31.875V7.5H11.25Z"
+                fill="#D3844A" />
+            </svg>
+            <div class="advantage-title">Юзабилити</div>
+            <div class="advantage-text">
+              Сайты, удобные для Вашего потенциального покупателя
+            </div>
+          </div>
+
+          <div class="advantage">
+            <svg width="60" height="60" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M26.25 31.1063L21.3937 26.25L18.75 28.8937L26.25 36.3937L41.25 21.3937L38.6063 18.75L26.25 31.1063Z"
+                fill="#D3844A" />
+              <path
+                d="M30 56.25L18.42 50.0756C15.1188 48.3193 12.3581 45.6972 10.4342 42.4907C8.5104 39.2842 7.49604 35.6144 7.50001 31.875V7.5C7.501 6.50574 7.89641 5.55249 8.59946 4.84945C9.3025 4.1464 10.2558 3.75099 11.25 3.75H48.75C49.7443 3.75099 50.6975 4.1464 51.4006 4.84945C52.1036 5.55249 52.499 6.50574 52.5 7.5V31.875C52.504 35.6144 51.4896 39.2842 49.5658 42.4907C47.6419 45.6972 44.8813 48.3193 41.58 50.0756L30 56.25ZM11.25 7.5V31.875C11.2469 34.9346 12.0771 37.9373 13.6514 40.5608C15.2258 43.1843 17.4849 45.3296 20.1863 46.7663L30 51.9994L39.8138 46.7681C42.5154 45.3313 44.7747 43.1858 46.3491 40.5619C47.9234 37.9381 48.7535 34.935 48.75 31.875V7.5H11.25Z"
+                fill="#D3844A" />
+            </svg>
+            <div class="advantage-title">Маркетинг</div>
+            <div class="advantage-text">
+              Маркетинг
+            </div>
+          </div>
+
+          
 
         </div>
       </div>
